<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stats Calculator</string>
    <string name="save_list">Save List</string>
    <string name="load_or_delete_list">Load/Delete List</string>
    <string name="basic_input_hint">eg: 59.4x2,61.34,60x3,65.9</string>
    <string name="size">Size</string>
    <string name="sum">Sum</string>
    <string name="arith_mean">Arithmetic Mean</string>
    <string name="geo_mean">Geometric Mean</string>
    <string name="median">Median</string>
    <string name="mode">Mode</string>
    <string name="range">Range</string>
    <string name="sample_var">Sample Variance</string>
    <string name="pop_var">Population Variance</string>
    <string name="sample_dev">Sample Std. Deviation</string>
    <string name="pop_dev">Population Std. Deviation</string>
    <string name="coeff_var">Coefficient of Variation</string>
    <string name="skewness">Skewness</string>
    <string name="kurtosis">Kurtosis</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="period">.</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="comma">,</string>
    <string name="times">x</string>
    <string name="pc_default_value">n/a</string>
    <string name="pc_n">n =</string>
    <string name="pc_r">r =</string>
    <string name="pc_ns">n1,n2,n3,&#8230; =</string>
    <string name="n_fact">n!</string>
    <string name="r_fact">r!</string>
    <string name="n_perm_r">nPr</string>
    <string name="n_comb_r">nCr</string>
    <string name="indistinct_perm">n! \u00F7\nn1!n2!n3!&#8230;</string>
    <string name="request_list_name">What would you like to name the list?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="formula">formula</string>
    <string name="reference_guide">Reference Guide</string>
    <string name="descriptive_stats">Descriptive\nStats</string>
    <string name="permutations_combinations">Permutations\n&amp;\nCombinations</string>
    <string name="n_hint">Total size</string>
    <string name="r_hint">Group size</string>
    <string name="n_vals_hint">Duplicates (if any)</string>
    <string name="save_list_hint">Make it memorable!</string>
    <string name="done_button_desc">Done Button</string>
    <string name="backspace_Desc">Backspace</string>
    <string name="home_menu_contact">Contact Developer</string>
    <string name="home_menu_rate">Rate This App</string>

</resources>