<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="3" >

        <Button
            android:id="@+id/keypad_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/one" />

        <Button
            android:id="@+id/keypad_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/two" />

        <Button
            android:id="@+id/keypad_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/three" />

        <Button
            android:id="@+id/keypad_backspace"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_backspace"
            android:longClickable="true"
            android:onClick="backSpace"
            android:text="@string/backspace"
            android:textColor="#FF7878" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="3" >

        <Button
            android:id="@+id/keypad_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/four" />

        <Button
            android:id="@+id/keypad_five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/five" />

        <Button
            android:id="@+id/keypad_six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/six" />

        <Button
            android:id="@+id/keypad_times"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_multiplier"
            android:onClick="keypadPress"
            android:text="@string/times"
            android:textColor="#836953" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="3" >

        <Button
            android:id="@+id/keypad_seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/seven" />

        <Button
            android:id="@+id/keypad_eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/eight" />

        <Button
            android:id="@+id/keypad_nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/nine" />

        <Button
            android:id="@+id/keypad_negative"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/minus" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <Button
            android:id="@+id/keypad_decimal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/period" />

        <Button
            android:id="@+id/keypad_zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_background"
            android:onClick="keypadPress"
            android:text="@string/zero" />

        <Button
            android:id="@+id/keypad_comma"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_comma"
            android:onClick="keypadPress"
            android:text="@string/comma"
            android:textColor="#7EA7D8" />

        <Button
            android:id="@+id/keypad_done"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/key_button_done"
            android:onClick="donePress"
            android:text="@string/done"
            android:textColor="#82CA9D" />
    </TableRow>

</TableLayout>