<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_border" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <TextView
                style="@style/pc_results_textview"
                android:text="@string/n_fact"
                android:typeface="serif" />

            <TextView
                android:id="@+id/pc_tvNFact"
                style="@style/pc_results_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <TextView
                style="@style/pc_results_textview"
                android:text="@string/r_fact"
                android:typeface="serif" />

            <TextView
                android:id="@+id/pc_tvRFact"
                style="@style/pc_results_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <TextView
                style="@style/pc_results_textview"
                android:text="@string/n_perm_r"
                android:typeface="serif" />

            <TextView
                android:id="@+id/pc_tvNPermR"
                style="@style/pc_results_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <TextView
                style="@style/pc_results_textview"
                android:text="@string/n_comb_r"
                android:typeface="serif" />

            <TextView
                android:id="@+id/pc_tvNChooseR"
                style="@style/pc_results_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <TextView
                style="@style/pc_results_textview"
                android:text="@string/indistinct_perm" />

            <TextView
                android:id="@+id/pc_tvIndistinct"
                style="@style/pc_results_textview" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>